examples/errors/division_by_zero.pigsh
# 错误：除以零
var a 10
var b 0
div result a b
